<resources>
    <string name="app_name">Baking App</string>

    <string name="ingredients">Ingredients</string>
    <string name="ingredient_label_quantity">Quantity</string>
    <string name="ingredient_label_ingredient_name">Ingredient</string>
    <string name="ingredient_label_measure">Measure</string>

    <string name="step_detail_label_instructions">Instructions</string>
    <string name="step_detail_nav_btn_previous">Previous</string>
    <string name="step_detail_nav_btn_next">Next</string>
    <string name="finish_btn">Finish</string>

    <string name="well_done">Well Done!</string>
    <string name="error_message_config_widget">An error has occurred. Please try again or check the internet connection!</string>

    <string name="example_ingredients_recipe_li_test">12 Ingredients</string>
    <string name="example_steps_recipe_li_test">6 Steps</string>
    <string name="example_servings_recipe_li_test">8 Servings</string>
    <string name="example_instruction">Press the cookie crumb mixture into the prepared pie pan and bake for 12 minutes. Let crust cool to room temperature.</string>
    <string name="example_measure">TBSP</string>
    <string name="example_quantity">1.50</string>
    <string name="example_ingredient">Graham Cracker crumbs</string>
    <string name="widget_config_label_please_select_a_recipe">Select one recipe:</string>
    <string name="example_recipe_name">Nutella Pie</string>
    <string name="widget_ingredient_measure_tv">Meas</string>
    <string name="widget_ingredient_quantity_tv">Qty</string>
    <string name="Preference_file_key">com.example.bakingapp.PREFERENCE_FILE_KEY</string>

</resources>
