<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.example.bakingapp.ui.recipe_detail.RecipeDetailSharedViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/steps_navigation_ll"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ingredients_btn"
            style="@style/bottomNavButtons"
            android:background="@color/colorPrimaryDark"
            android:text="@string/ingredients"
            android:textAllCaps="true"

            android:visibility="@{viewmodel.stepIndex == 1 ? View.VISIBLE : View.GONE}"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/previous_btn"
            style="@style/bottomNavButtons"
            android:background="@color/colorPrimaryDark"

            android:visibility="@{viewmodel.stepIndex > 1 ? View.VISIBLE : View.GONE}"

            android:text="@string/step_detail_nav_btn_previous"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/next_btn"
            style="@style/bottomNavButtons"
            android:background="@color/colorAccent"
            android:text="@string/step_detail_nav_btn_next"

            android:visibility="@{viewmodel.stepIndex &lt; viewmodel.nbOfSteps ? View.VISIBLE : View.GONE}"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/previous_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/finish_btn"
            style="@style/bottomNavButtons"
            android:background="@color/colorAccent"
            android:text="@string/finish_btn"
            android:textAllCaps="true"

            android:visibility="@{viewmodel.stepIndex == viewmodel.nbOfSteps ? View.VISIBLE : View.GONE}"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/previous_btn"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</layout>