<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ingredient_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ingredient_name_label_tv"
                style="@style/LabelDark"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:padding="4dp"

                android:text="@string/ingredient_label_ingredient_name" />

            <TextView
                android:id="@+id/ingredient_quantity_label_tv"
                style="@style/LabelDark"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"

                android:text="@string/ingredient_label_quantity" />

            <TextView
                android:id="@+id/ingredient_measure_label_tv"
                style="@style/LabelDark"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="@string/ingredient_label_measure" />

        </LinearLayout>

        <ListView
            android:id="@+id/ingredients_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="@color/transparent" />

    </LinearLayout>
</layout>
